# world-cup-predict

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
artifacts/: evaluation.json  metrics_summary.csv  predictions.json
notebooks/: 01_training.ipynb
scripts/: train.py
src/: __init__.py  config.py  data.py  modeling.py  probability.py  training.py
src/dashboard/: __init__.py  charts.py  components.py  data_access.py  pages.py  styles.py
tests/: test_artifact_contract.py  test_dashboard.py  test_data_pipeline.py  test_modeling.py  test_probability.py  test_training_cli.py
