[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "world-cup-predict"
version = "0.1.0"
description = "Pipeline probabilistik dan dashboard lokal semifinal Piala Dunia 2026."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "joblib>=1.4,<2",
  "numpy>=2.1,<3",
  "pandas>=2.2,<3",
  "plotly>=5.24,<7",
  "scikit-learn>=1.6,<2",
  "statsmodels>=0.14,<1",
  "streamlit>=1.41,<2",
]

[project.optional-dependencies]
dev = [
  "jupyterlab>=4.2,<5",
  "nbclient>=0.10,<1",
  "nbformat>=5.10,<6",
  "pytest>=8.3,<10",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

